--- a/favorite-thing.html
+++ b/favorite-thing.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+
   <title>Favorite</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>Favorite dogs</h1>
-
-  <div class="main">
-    <ul>
-      <li>Pug</li>
-      <li>Golden retriever</li>
-      <li>Terrier</li>
-      <li>All of the above</li>
-    </ul>
-  </div>
-
   <div class="sidebar">
     <h3>Review from angry/happy user</h3>
     <p>This person did / did not have a good time. Here's why:</p>
@@ -25,6 +16,28 @@
       <li></li>
     </ul>
   </div>
+
+  <div class="main">
+    
+    <ul>
+      <li>Pug</li>
+      <li>Golden retriever</li>
+      <li>Terrier</li>
+      <li>All of the above</li>
+    </ul>
+    
+    <div class="column">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="column">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="column">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+  </div>
+
 
 </body>
 </html>
