added class to sidebar image for formatting purposes

--- a/favorite-thing.html
+++ b/favorite-thing.html
@@ -15,7 +15,7 @@
       <li>Pets</li>
       <li>Treats</li>
     </ul>
-    <div>
+    <div class="thumbs-up">
       <img src="img/statham-thumb.jpg">
     </div>
   </div>
